unpackaged/main/default/objects/Agency__c/Agency__c.object-meta.xml
<CustomObject>
    <label>Agence</label>
    <nameField>
        <label>Nom de Agence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>