unpackaged/main/default/objects/Agency__c/fields/AgenceMobilite__c.field-meta.xml
<CustomField>
    <fullName>AgenceMobilite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agence en mobilité</label>
    <type>Checkbox</type>
</CustomField>