unpackaged/main/default/objects/Agency__c/fields/ConditionReglementCEGID__c.field-meta.xml
<CustomField>
    <fullName>ConditionReglementCEGID__c</fullName>
    <label>Condition Reglement CEGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>