unpackaged/main/default/objects/Agency__c/fields/Dematerialisation__c.field-meta.xml
<CustomField>
    <fullName>Dematerialisation__c</fullName>
    <label>Dematerialisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>