unpackaged/main/default/objects/Agency__c/fields/Departement__c.field-meta.xml
<CustomField>
    <fullName>Departement__c</fullName>
    <label>Département</label>
    <length>255</length>
    <type>Text</type>
</CustomField>