unpackaged/main/default/objects/Agency__c/fields/DO__c.field-meta.xml
<CustomField>
    <fullName>DO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agences_DO</relationshipName>
    <type>Lookup</type>
</CustomField>