unpackaged/main/default/objects/Agency__c/fields/DS__c.field-meta.xml
<CustomField>
    <fullName>DS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agences_DS</relationshipName>
    <type>Lookup</type>
</CustomField>