unpackaged/main/default/objects/Agency__c/fields/EmailAtelier__c.field-meta.xml
<CustomField>
    <fullName>EmailAtelier__c</fullName>
    <label>Email atelier</label>
    <type>Email</type>
</CustomField>