unpackaged/main/default/objects/Agency__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Méthode de paiement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>