unpackaged/main/default/objects/Agency__c/fields/RegionZone__c.field-meta.xml
<CustomField>
    <fullName>RegionZone__c</fullName>
    <label>Région / Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>