unpackaged/main/default/objects/Agency__c/fields/SocietePF__c.field-meta.xml
<CustomField>
    <fullName>SocietePF__c</fullName>
    <label>Société PF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>