unpackaged/main/default/objects/Agency__c/fields/Territoire__c.field-meta.xml
<CustomField>
    <fullName>Territoire__c</fullName>
    <label>Territoire</label>
    <length>255</length>
    <type>Text</type>
</CustomField>