unpackaged/main/default/objects/Agency__c/fields/TVAIntracom__c.field-meta.xml
<CustomField>
    <fullName>TVAIntracom__c</fullName>
    <label>TVA Intracom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>