unpackaged/main/default/objects/Agency__c/fields/TypeAgence__c.field-meta.xml
<CustomField>
    <fullName>TypeAgence__c</fullName>
    <label>Type Agence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>