unpackaged/main/default/objects/Agency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Libelle__c</columns>
    <columns>Code_agence__c</columns>
    <columns>RegionZone__c</columns>
    <columns>SocietePF__c</columns>
    <columns>Territoire__c</columns>
    <columns>TypeAgence__c</columns>
    <columns>ShippingAddress__CountryCode__s</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>